--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 
 *{
   box-sizing: border-box;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   margin: 0;
   padding: 0;
 }
@@ -157,7 +157,7 @@
 
 nav>.col-15 {
   padding-right: 0;
-  margin: 0;
+  padding-top: 0;
 }
 
 @font-face {
@@ -179,4 +179,33 @@ nav>.col-15 {
   align-items: center;
   margin:0;
   padding:0;
+}
+
+.pagination-no {
+  height: 17px;
+  color: #af9a63;
+  font-family: "Novecentosanswide-Book";
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 18.4px;
+  text-transform: uppercase;
+  letter-spacing: 0.9px;
+  margin-bottom: 3%;
+  margin-top: 6%;
+  opacity: 0.5;
+}
+
+.pagination-line {
+  width: 100%;
+  height: 2px;
+  background-color: #af9a63;
+  opacity: 0;
+}
+.active-line, .active-no {
+  opacity: 1;
+}
+
+.face-front {
+  display: block;
+  margin: auto;
 }
